gcc/testsuite/g++.dg/init/static4.C
// PR c++/51461

struct A
{
  static const A a = 0;		// { dg-error "incomplete|non-integral" }
};
